2009-11-27  Rafael Avila de Espindola  <espindola@google.com>

PR gold/11025
	* incremental-dump.cc (main): Use llu to print 64 bit values.